@@ -1,5 +1,17 @@
 1999-03-28  Alexander Larsson  <alla@lysator.liu.se>
 
+	* app/display.c:
+	Moved diagram_add_ddisplay() call into new_display().
+	Fixed new_display to not use uninitialized variables
+	causing loaded files to show up as black (or garbage).
+	
+	* app/commands.c:
+	* app/app_procs.c:
+	Removed unneeded calls to diagram_add_ddisplay().
+
+	
+1999-03-28  Alexander Larsson  <alla@lysator.liu.se>
+
 	* objects/UML/lifeline.c:
 	Fixed bug in copy.
 	Patch from Andreas Jaeger <aj@arthur.rhein-neckar.de>.
